fix jumping

--- a/src/sections/insta/Insta.css
+++ b/src/sections/insta/Insta.css
@@ -9,6 +9,10 @@
   text-align: center;
   /* top: 20vh; */
   /* top: 20%; */
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   h2{
     padding-top: 50%;
   }
