--- a/src/sections/locations/locations.css
+++ b/src/sections/locations/locations.css
@@ -41,6 +41,7 @@
 
      display: flex;
      align-items:center;
+     justify-content: center;
 }
 
 #store-img-container-1 {
